--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: ##FFFCF6;
     --foreground: #ededed;
   }
 }
@@ -23,5 +23,12 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.gradient-border-bottom {
+  border-bottom: 4px solid transparent;
+  background-image: linear-gradient(to right, #F47521, #CDBC3C, #2ABDBB);
+  background-clip: padding-box, border-box;
+  border-image-slice: 1;
 }
 
