--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,13 +25,6 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.gradient-border-bottom {
-  border-bottom: 4px solid transparent;
-  background-image: linear-gradient(to right, #F47521, #CDBC3C, #2ABDBB);
-  background-clip: padding-box, border-box;
-  border-image-slice: 1;
-}
-
 /* globals.css */
 .light-gradient {
   background: linear-gradient(to right, #FFFCF6, #DDDDDC, #D7D7D7);
@@ -39,5 +32,33 @@ body {
 
 .dark-gradient {
   background: linear-gradient(to right, #1F2937, #111827, #000000);
+}
+
+.fixed-header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 50;
+  background-color: var(--background-color, white);
+}
+
+/* Padrão: Second header abaixo do MainHeader */
+.second-header {
+  position: sticky;
+  top: 40px; /* Altura normal do MainHeader */
+  width: 100%;
+  z-index: 49;
+  background-color: var(--background-color, white);
+}
+
+/* Quando o MainHeader some (telas menores), o Header sobe */
+@media (max-width: 768px) {
+  .fixed-header {
+    display: none; /* Esconde o MainHeader */
+  }
+  
+  .second-header {
+    top: 0; /* Faz o Header ocupar o topo */
+  }
 }
 
